# orb-software

./: .dockerignore  .envrc.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASES.md  SECURITY.md  build-aarch64.sh  build.rs  cargo-clippy.patch  clippy.toml  deny.toml  exploit.py  flake.nix  justfile  loc.txt  mise.toml  pyproject.toml  rust-toolchain.toml  rustfmt.toml  setup-vcan.sh  taplo.toml
agentwire/: Cargo.toml
agentwire/docs/: minijailed_process.md
agentwire/macros/: Cargo.toml
agentwire/macros/src/: broker.rs  lib.rs  test.rs
agentwire/src/: lib.rs  port.rs  testing_rt.rs
agentwire/src/agent/: minijail.rs  mod.rs  process.rs  task.rs  thread.rs
agentwire/tests/: broker.rs  process.rs  task.rs  thread.rs
artificer/: Cargo.toml  DESIGN.md  build.rs
artificer/src/: lib.rs  main.rs
artificer/src/config/: example.toml  lock.rs  sources.rs  spec.rs
attest/: Cargo.toml  README.md
attest/dbus/: Cargo.toml
attest/dbus/src/: lib.rs
attest/debian/: orb-attest.worldcoin-attest.service
attest/src/: client.rs  config.rs  conn_change.rs  dbus.rs  lib.rs  main.rs  remote_api.rs
backend-state/: Cargo.toml
backend-state/debian/: orb-backend-state.worldcoin-backend-state.service
backend-state/src/: api.rs  context.rs  dbus_interface.rs  main.rs
backend-status/: Cargo.toml  README.md
backend-status/dbus/: Cargo.toml
backend-status/dbus/src/: lib.rs  types.rs
backend-status/debian/: orb-backend-status.worldcoin-backend-status.service
backend-status/src/: args.rs  dbus.rs  main.rs  net_stats.rs  update_progress.rs
backend-status/src/backend/: mod.rs  models.rs  os_version.rs  status.rs  types.rs  uptime.rs
backend-status/src/collectors/: core_signups.rs  update_progress.rs
backend-status/src/dbus/: intf_impl.rs  mod.rs
build-info/: Cargo.toml  README.md  build.rs
build-info/helper/: Cargo.toml
build-info/helper/src/: lib.rs
build-info/src/: lib.rs
can/: CHANGELOG.md  Cargo.toml  README.md
can/src/: addr.rs  filter.rs  frame.rs  lib.rs  socket.rs  stream.rs
can/src/isotp/: flowcontrol.rs  linklayer.rs  mod.rs  stream.rs
can/tests/: binding_test.rs  setup-vcan.sh
can/tests/integration/: filters.rs  frame_stream.rs  isotp_stream.rs  main.rs
cellcom/: Cargo.toml  Dockerfile  README.md
cellcom/src/: data.rs  geoloc.rs  lib.rs  main.rs  wifi.rs
cellcom/src/backend/: google.rs  mod.rs  status.rs
cellcom/src/cell/: parser.rs
connd/: Cargo.toml
connd/debian/: worldcoin-connd.service
connd/src/: dd_reporter.rs  lib.rs  main.rs  modem_monitor.rs
connd/src/modem/: mod.rs  modem_manager.rs  net_stats.rs  signal.rs
const-concat/: Cargo.toml  README.md
const-concat/src/: lib.rs
deps-tests/: Cargo.toml  README.md
deps-tests/tests/: problematic-deps.rs
efivar/: Cargo.toml
efivar/src/: ioctl.rs  lib.rs
endpoints/: Cargo.toml  README.md
endpoints/src/: backend.rs  endpoints.rs  lib.rs  orb_id.rs  v1.rs  v2.rs
endpoints/src/v2/: endpoints.rs
fleet-cmdr/: Cargo.toml  README.md
fleet-cmdr/debian/: fleet-cmdr.worldcoin-fleet-cmdr.service  worldcoin-fleet-cmdr.service
fleet-cmdr/src/: args.rs  job_client.rs  lib.rs  main.rs  orb_info.rs  orchestrator.rs  settings.rs
fleet-cmdr/src/handlers/: action_orb_details.rs  action_reboot.rs  cmd_orb_details.rs  cmd_read_file.rs  cmd_reboot.rs  cmd_run_binary.rs  cmd_tail_logs.rs  mod.rs
gst-jpeg/: Cargo.toml  README.md
gst-jpeg/src/: lib.rs
header-parsing/: Cargo.toml  README.md
header-parsing/src/: lib.rs
hil/: Cargo.toml  README.md  usb-relay.sh
hil/examples/: orb_verify.rs
hil/src/: boot.rs  download_s3.rs  flash.rs  ftdi.rs  lib.rs  main.rs  models.rs  network_discovery.rs  nfsboot.rs  orb.rs  pin_controller.rs  relay.rs  remote_cmd.rs  rts.rs  serial.rs  ssh_wrapper.rs  utils.rs
hil/src/commands/: button_ctrl.rs  cmd.rs  copy.rs  debug_board.rs  fetch_persistent.rs  flash.rs  ftdi.rs  health_checks.rs  login.rs  (+8 more)
jobs-agent/: Cargo.toml  README.md
jobs-agent/debian/: worldcoin-jobs-agent.service
jobs-agent/src/: args.rs  job_client.rs  lib.rs  main.rs  orchestrator.rs  program.rs  settings.rs  shell.rs
jobs-agent/tests/: check_my_orb.rs  docker.rs  fake_orb.rs  fixture.rs  job_handler.rs  orb_details.rs  read_file.rs  reboot.rs
jwk-util/: Cargo.toml
jwk-util/src/: conversions.rs  main.rs
location/: Cargo.toml  Dockerfile  README.md
location/cellcom/: Cargo.toml  README.md
location/daemon/: Cargo.toml  README.md
location/debian/: fleet-cmdr.worldcoin-fleet-cmdr.service  location.worldcoin-location.service  orb-location.worldcoin-location.service
location/google-geolocation-api/: Cargo.toml  README.md
location/src/: config.rs  data.rs  dbus.rs  errors.rs  lib.rs  main.rs  network_manager.rs  service.rs  wifi.rs
location/wifi/: Cargo.toml  README.md
location/wpa-supp/: Cargo.toml  README.md
ltestat/: Cargo.toml
ltestat/src/: backend_status_reporter.rs  connection_state.rs  dbus.rs  dd_handler.rs  dd_reporter.rs  lib.rs  lte_data.rs  main.rs  metrics_reporter.rs  modem.rs  modem_manager.rs  modem_monitor.rs  utils.rs
mcu-interface/: Cargo.toml  README.md
mcu-interface/examples/: log_messages.rs
mcu-interface/src/: lib.rs
mcu-util/: Cargo.toml  README.md  warn_renamed.sh
mcu-util/src/: logging.rs  main.rs
oes/: Cargo.toml  README.md
oes/src/: connd.rs  core.rs  lib.rs  system.rs
optee/: Cargo.toml  README.md  pyproject.toml
optee/.cargo/: config.toml
optee/optee_build_scripts/: __init__.py
optee/secure-storage/: README.md  uuid.txt
orb-attest/: Cargo.toml  README.md  build.rs
orb-attest/debian/: orb-attest.worldcoin-attest.service  orb-token.worldcoin-token-dumb-client.service  orb-token.worldcoin-token.service
orb-attest/src/: client.rs  config.rs  dbus.rs  lib.rs  logging.rs  main.rs  remote_api.rs
orb-backend-state/: Cargo.toml  README.md
orb-backend-state/src/: api.rs  dbus_interface.rs  dbus_proxies.rs  main.rs  state.rs
(+1345 files in other folders)
