[workspace]
resolver = "2"
members = [
  "agentwire",
  "agentwire/macros",
  "attest",
  "attest/dbus",
  "backend-state",
  "build-info",
  "build-info/helper",
  "can",
  "cellcom",
  "const-concat",
  "deps-tests",
  "endpoints",
  "experiments/artificer",
  "experiments/zenoh",
  "fleet-cmdr",
  "header-parsing",
  "hil",
  "jwk-util",
  "mcu-interface",
  "mcu-util",
  "qr-link",
  "security-utils",
  "seek-camera/sys",
  "seek-camera/wrapper",
  "slot-ctrl",
  "supervisor",
  "telemetry",
  "thermal-cam-ctrl",
  "ui",
  "ui/cone",
  "ui/pid",
  "ui/sound",
  "ui/uart",
  "update-agent",
  "update-agent/core",
  "update-verifier",
  "verity-tree-calc",
  "wpa-supplicant",
  "zbus-proxies",
  "zbus-proxies/cli",
  "test-utils"
]

[workspace.package]
edition = "2021"
license = "MIT OR (Apache-2.0 WITH LLVM-exception)"
repository = "https://github.com/worldcoin/orb-software"
rust-version = "1.81.0" # See rust-toolchain.toml

# We centralize feature flags here, because it improves build caches and helps
# prevent edge cases where CI doesn't catch build errors due to more features
# being present in a --all vs -p build.
[workspace.dependencies]
base64 = "0.22.1"
bytes = "1.7.1"
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = "0.6.2"
console-subscriber = "0.4"
data-encoding = "2.3"
derive_more = { version = "0.99", default-features = false, features = ["display", "from"] }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["std"]}
eyre = "0.6.12"
ftdi-embedded-hal = { version = "0.22.0", features = ["libftd2xx", "libftd2xx-static"] }
futures = "0.3.30"
hex-literal = "0.4.1"
http = "1.2.0"
jose-jwk = { version = "0.1.2", default-features = false }
libc = "0.2.153"
nix = { version = "0.28", default-features = false, features = [] }
prost = "0.13.4"
prost-build = "0.13.4"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "stream"] }
ring = "0.16"
rustix = "0.38.37"
secrecy = "0.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
testcontainers = "0.20.0"
tempfile = "3.10.1"
thiserror = "1.0.60"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.4"
tokio-stream = "0.1.15"
tokio-test = "0.4.4"
tokio-util = "0.7.11"
tracing = "0.1"
tracing-journald = "0.3.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
zbus_systemd = "0.25600.0"
zenoh = "1.0.3"

can-rs.path = "can"
orb-attest-dbus.path = "attest/dbus"
orb-build-info.path = "build-info"
orb-const-concat.path = "const-concat"
orb-endpoints.path = "endpoints"
orb-header-parsing.path = "header-parsing"
orb-mcu-interface.path = "mcu-interface"
orb-security-utils.path = "security-utils"
orb-slot-ctrl.path = "slot-ctrl"
orb-telemetry.path = "telemetry"
orb-update-agent-core.path = "update-agent/core"
orb-update-agent-dbus.path = "update-agent/dbus"
orb-zbus-proxies.path = "zbus-proxies"
seek-camera.path = "seek-camera/wrapper"

[workspace.dependencies.orb-messages]
git = "https://github.com/worldcoin/orb-messages"
rev = "3dffed6e01fa4aaca347eca52be87bfc298508eb"

[workspace.dependencies.nusb]
git = "https://github.com/kevinmehall/nusb"
rev = "3ec3508324cdd01ca288b91ddcb2f92fd6a6f813"

[workspace.dependencies.gpt]
git = "https://github.com/worldcoin/gpt"
branch = "take-partition"

# increase the optimization of third party crates in dev builds.
# [profile.dev.package."*"]
# opt-level = 2

# What we use when producing artifacts to distribute
[profile.artifact]
inherits = "release"
lto = true
strip = true
debug = false
