[project]
name = "uv-stuff"
version = "0.0.0"
dependencies = ["requests"]

# [tool.uv.sources]
# optee-build-scripts = { workspace = true }

[tool.uv.workspace]
members = ["optee"]

[tool.uv.build-backend]
module-root = ""

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.15,<0.10.0"]
