[package]
name = "agentwire"
version = "0.0.1"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
description = """
A framework for asynchronous message-passing agents.
"""
publish = false

edition.workspace = true
[features]
sandbox-network = []

[dependencies.agentwire-macros]
version = "=0.0.1"
path = "macros"

[dependencies]
close_fds = "0.3.2"
futures = "0.3"
libc = "0.2.93"
nix = { version = "0.26.2", default-features = false, features = ["signal", "fs", "mman", "sched"] }
rkyv = "0.7.40"
shell-words = "1.1.0"
thiserror = "1.0.61"
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync", "time", "io-util"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
