[package]
name = "artificer"
version = "0.0.0"
description = "CLI tool to reproducibly download artifacts"
authors = ["Ryan Butler <thebutlah@users.noreply.github.com>"]
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
build-info.path = "../build-info"
cacache = "12"
clap.workspace = true
color-eyre.workspace = true
derive_more.workspace = true
futures.workspace = true
indicatif = { version = "0.17", features = ["tokio"] }
octocrab = "0.32"
reqwest.workspace = true
semver = { version = "1", features = ["serde"] }
serde.workspace = true
tokio.workspace = true
tokio-util = { version =  "0.7", default-features = false, features = ["compat"] } 
toml = "0.8.8"
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
build-info = { path = "../build-info", features = ["build-script"] }
