[package]
name = "orb-attest"
version = "0.2.10"
authors = ["Aleksei Fedotov <aleksei.fedotov@toolsforhumanity.com>"]
description = "A daemon for fetching the backend attestation token"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
color-eyre.workspace = true
data-encoding = "2.3"
event-listener = "*"
eyre.workspace = true
futures.workspace = true
orb-attest-dbus.workspace = true
orb-build-info.workspace = true
orb-const-concat.workspace = true
orb-endpoints.workspace = true
orb-info.workspace = true
orb-security-utils = { workspace = true, features = ["reqwest"] }
orb-telemetry.workspace = true
reqwest = { workspace = true, features = ["json", "multipart"] }
ring.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde_json.workspace = true
serde_with = { version = "3.2", features = ["base64"] }
serde.workspace = true
thiserror = { workspace = true, features = ["std"] }
tokio.workspace = true
tracing-journald.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url = "2.2"
zbus.workspace = true

[build-dependencies]
orb-build-info = { workspace = true, features = ["build-script"] }

[dev-dependencies]
serial_test = "2.0"
tempfile = "3.3"
wiremock = "0.6"

[package.metadata.deb]
maintainer-scripts = "debian/"
assets = [["target/release/orb-attest", "/usr/local/bin/", "755"]]
systemd-units = [{ unit-name = "worldcoin-attest" }]
