[package]
name = "orb-backend-state"
version = "0.0.5"
description = "Systemd service that reads current orb state from orb-manager backend"
authors = ["Ryan Butler <thebutlah@users.noreply.github.com>"]
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["stage"]
stage = []

[dependencies]
clap.workspace = true
color-eyre.workspace = true
derive_more.workspace = true
futures.workspace = true
orb-attest-dbus.workspace = true
orb-build-info.workspace = true
orb-header-parsing.workspace = true
orb-security-utils = { workspace = true, features = ["reqwest"] }
orb-telemetry.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
zbus.workspace = true

[build-dependencies]
orb-build-info = { workspace = true, features = ["build-script"] }

[package.metadata.deb]
assets = [
  ["target/release/orb-backend-state", "/usr/local/bin/", "755"]
]
maintainer-scripts = "debian/"
systemd-units = [
  { unit-name = "worldcoin-backend-state" },
]
