[package]
name = "build-info"
version = "0.0.0"
description = "Detects build information, makes it available for use"
authors = ["Ryan Butler <thebutlah@users.noreply.github.com>"]
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
build-script = ["dep:build-info-helper"]

[dependencies]
build-info-helper = { path = "helper", optional = true }

[build-dependencies]
build-info-helper.path = "helper"
color-eyre = "0.6"
