[package]
name = "orb-build-info"
version = "0.0.0"
description = "Detects build information, makes it available for use"
authors = ["Ryan Butler <thebutlah@users.noreply.github.com>"]
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
build-script = ["dep:orb-build-info-helper"]

[dependencies]
orb-build-info-helper = { path = "helper", optional = true }
orb-const-concat.path = "../const-concat"

[build-dependencies]
orb-build-info-helper.path = "helper"
color-eyre = "0.6"
