[package]
name = "can-rs"
version = "0.0.0"
description = "Provides an interface to the Linux kernel's SocketCAN API"
authors = [
	"Galileo Daras <galileo.daras@toolsforhumanity.com>",
	"Cyril Fougeray <cyril.fougeray@toolsforhumanity.com>",
]
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
itertools = "0.10.3"
libc = "0.2.117"
paste = "1.0"
thiserror.workspace = true

[features]
isotp = []

[package.metadata.orb]
unsupported_targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
