[package]
name = "orb-cellcom"
version = "0.0.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
eyre.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
serde.workspace = true
serde_json.workspace = true
serialport = "4.6.1"
tracing.workspace = true
tracing-subscriber.workspace = true
wpactrl = "0.5.1"
orb-endpoints.workspace = true
orb-info = { workspace = true, features = ["orb-id"] }
orb-security-utils = { workspace = true, features = [ "reqwest", "blocking" ] }
