[package]
name = "connd"
version = "0.1.0"
description = "Orb Connectivity Daemon (WiFi / Cellular / Bluetooth)"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
color-eyre.workspace = true
dogstatsd = "0.11"
orb-backend-status-dbus.workspace = true
orb-info = { workspace = true, features = ["orb-os-release", "async"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
