[package]
name = "deps-tests"
version = "0.0.0"
description = "Smoke test for libraries that are tricky to compile or non-portable"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# The `use-pkg-config` feature flag is mandatory, because I was not able to get
# the libsodium-sys-stable build script to cross compile. Instead, we use a
# precompiled version provided by a package manager, and detect it with pkg-config.
# This also dramatically reduces compile times, as libsodium takes ages to build.
alkali = { version = "0.3", features = ["use-pkg-config"] }
libc = "0.2"
nix.workspace = true
openssl = "0.10"
ring = "0.17"
rodio = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.8"
seek-camera.path = "../seek-camera/wrapper"
