[package]
name = "orb-endpoints"
version = "0.0.0"
description = "Common location for all endpoints associated with the orb"
authors = ["Ryan Butler <thebutlah@users.noreply.github.com>"]
publish = false

# orb-core can't consume crates that use workspace inheritance :(
edition = "2021"
license = "MIT OR (Apache-2.0 WITH LLVM-exception)"
repository = "https://github.com/worldcoin/orb-software"
rust-version = "1.77.0"

[dependencies]
hex = "0.4.3"
url = "2.5.0"
