[package]
name = "orb-endpoints"
version = "0.0.0"
description = "Common location for all endpoints associated with the orb"
authors = ["Ryan Butler <thebutlah@users.noreply.github.com>"]
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
url = "2.5.0"
orb-info = { workspace = true, default-features = false, features = ["orb-id"] }
