[package]
name = "orb-fleet-cmdr"
version = "0.1.0"
authors = ["Paul Quinn <paul.quinn@toolsforhumanity.com>"]
description = "Worldcoin Fleet Commander"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.77"
clap = { workspace = true, features = ["derive", "env"] }
color-eyre.workspace = true
const_format = "0.2.30"
figment = { version = "0.10.8", features = ["env", "toml"] }
futures.workspace = true
libc.workspace = true
listenfd = "1.0.0"
once_cell = "1.15.0"
orb-build-info.workspace = true
orb-endpoints.workspace = true
orb-telemetry.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_path_to_error = "0.1.8"
serde_with = "3.11.0"
tap = "1.0.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tokio-stream.workspace = true
tokio-test.workspace = true
tokio-util.workspace = true
tracing = { workspace = true, features = ["attributes"] }
zbus = { workspace = true, default-features = false, features = ["tokio"] }
zbus_systemd = { workspace = true, features = ["systemd1", "login1"] }

[dependencies.orb-relay-client]
git = "https://github.com/worldcoin/orb-relay-messages.git"
rev = "ef8cc29d0580ccc9b9f9ec1a020ce4fbfddc3317"

[dependencies.orb-relay-messages]
git = "https://github.com/worldcoin/orb-relay-messages.git"
rev = "ef8cc29d0580ccc9b9f9ec1a020ce4fbfddc3317"
features = ["client"]

[dependencies.orb-relay-test-utils]
git = "https://github.com/worldcoin/orb-relay-messages.git"
rev = "ef8cc29d0580ccc9b9f9ec1a020ce4fbfddc3317"

[build-dependencies]
orb-build-info = { workspace = true, features = ["build-script"] }

[dev-dependencies]
dbus-launch = "0.2.0"
tokio = { workspace = true, features = ["sync", "test-util"] }

[package.metadata.deb]
maintainer-scripts = "debian/"
assets = [["target/release/orb-fleet-cmdr", "/usr/local/bin/", "755"]]
systemd-units = [{ unit-name = "worldcoin-fleet-cmdr" }]
