[package]
name = "header-parsing"
version = "0.0.0"
description = "Common header parsing functionality"
authors = ["Ryan Butler <thebutlah@users.noreply.github.com"]
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
http = "0.2"
